--- a/ar/index.html
+++ b/ar/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -39,11 +40,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" target="_self" title="">About Us</a>
+                                <a class="nav-link" href="#about" target="_self" title="">About Us</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#" target="_self" title="">Contacts</a>
+                                <a class="nav-link" href="#contact" target="_self" title="">Contacts</a>
                             </li>
                             <li class="nav-item d-lg-none">
                                 <div class="select-dropdown-wrapper">
@@ -62,14 +63,14 @@
                                         </button>
                                         <ul class="select-dropdown__list">
                                             <li data-value="1" class="select-dropdown__list-item">
-                                                <a href="./index.html" class="d-flex align-items-center ">
-                                                    <img src="./assets/img/eng.png" alt="">
+                                                <a href="../index.html" class="d-flex align-items-center ">
+                                                    <img src="../assets/img/eng.png" alt="">
                                                     <span>English</span>
                                                 </a>
                                             </li>
                                             <li data-value="2" class="select-dropdown__list-item">
                                                 <a href="./ar/index.html" class="d-flex align-items-center ">
-                                                    <img src="./assets/img/ar.webp" alt="">
+                                                    <img src="../assets/img/ar.webp" alt="">
                                                     <span>Arabic</span>
                                                 </a>
                                             </li>
@@ -111,7 +112,7 @@
                                 </a>
                             </li>
                             <li data-value="2" class="select-dropdown__list-item">
-                                <a href="./index.html" class="d-flex align-items-center ">
+                                <a href="./ar/index.html" class="d-flex align-items-center ">
                                     <img src="../assets/img/ar.webp" alt="">
                                     <span>Arabic</span>
                                 </a>
@@ -140,7 +141,7 @@
         <div class="hero-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-up">
                         <div class="hero-text-content">
                             <div class="">
                                 <h1>Prime EXPREIENCE</h1>
@@ -170,7 +171,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-down">
                         <div class="hero-img">
                             <img src="../assets/img/hero-img.png" alt="">
                         </div>
@@ -178,15 +179,15 @@
                 </div>
             </div>
         </div>
-        <section class="section about-section">
+        <section class="section about-section" id="about">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left">
                         <div class="about-img">
                             <img src="../assets/img/about.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right">
                         <div class="about-content">
                             <div class="">
                                 <h1>About us</h1>
@@ -217,10 +218,10 @@
                         ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
                     </p>
                 </div>
-                <div class="row productContainer">
+                <div class="row productContainer " data-aos="fade-right">
 
                 </div>
-                <a href="./flavors.html">
+                <a href="./flavors.html" data-aos="fade-down">
                     More detAILS...
                 </a>
             </div>
@@ -228,7 +229,7 @@
         <section class="section partner-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right">
                         <div class="partner-content">
                             <span>Do you want to Work With Us ?</span>
                             <h2>Become A Partner</h2>
@@ -246,7 +247,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left">
                         <div class="partner-img">
                             <img src="../assets/img/partner.png" alt="">
                         </div>
@@ -254,10 +255,10 @@
                 </div>
             </div>
         </section>
-        <section class="section contact-section">
+        <section class="section contact-section" id="contact">
             <div class="container ">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="flip-left">
                         <div class="contact-content">
                             <div class="contact-content-title mb-4">
                                 <span>For more information...</span>
@@ -274,7 +275,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="flip-right">
                         <div class="contact-deatiles">
                             <img src="../assets/img/logo.png" alt="">
                             <h3>
@@ -382,6 +383,7 @@
                 </div>
             </div>
         </div>
+
         <button id="scrollToTop">
             <svg width="30" height="37" viewBox="0 0 30 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -396,7 +398,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
     <script>
+        AOS.init({
+            duration: 700,
+            offset: 200,
+        });
         $(".select-dropdown__button").on("click", function () {
             $(".select-dropdown__list").toggleClass("active");
         });
@@ -416,7 +424,7 @@
 
             // Function to fetch and display products
             function fetchAndDisplayProducts() {
-                fetch('data.json')
+                fetch('../data.json')
                     .then(response => response.json())
                     .then(data => {
                         // Filter the data array to get only the products where isFeatures is true
@@ -455,6 +463,7 @@
                 popup.style.display = "none";
                 localStorage.setItem("showPopup", "false");
             });
+
 
 
             document.getElementById("scrollToTop").addEventListener('click', (() => {
