--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -39,11 +40,11 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" target="_self" title="">About Us</a>
+                                <a class="nav-link" href="#about" target="_self" title="">About Us</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#" target="_self" title="">Contacts</a>
+                                <a class="nav-link" href="#contact" target="_self" title="">Contacts</a>
                             </li>
                             <li class="nav-item d-lg-none">
                                 <div class="select-dropdown-wrapper">
@@ -140,7 +141,7 @@
         <div class="hero-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-up">
                         <div class="hero-text-content">
                             <div class="">
                                 <h1>Prime EXPREIENCE</h1>
@@ -170,7 +171,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-down">
                         <div class="hero-img">
                             <img src="./assets/img/hero-img.png" alt="">
                         </div>
@@ -178,15 +179,15 @@
                 </div>
             </div>
         </div>
-        <section class="section about-section">
+        <section class="section about-section" id="about">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left">
                         <div class="about-img">
                             <img src="./assets/img/about.png" alt="">
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right">
                         <div class="about-content">
                             <div class="">
                                 <h1>About us</h1>
@@ -217,10 +218,10 @@
                         ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
                     </p>
                 </div>
-                <div class="row productContainer">
+                <div class="row productContainer " data-aos="fade-right">
 
                 </div>
-                <a href="./flavors.html">
+                <a href="./flavors.html" data-aos="fade-down">
                     More detAILS...
                 </a>
             </div>
@@ -228,7 +229,7 @@
         <section class="section partner-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right">
                         <div class="partner-content">
                             <span>Do you want to Work With Us ?</span>
                             <h2>Become A Partner</h2>
@@ -246,7 +247,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left">
                         <div class="partner-img">
                             <img src="./assets/img/partner.png" alt="">
                         </div>
@@ -254,10 +255,10 @@
                 </div>
             </div>
         </section>
-        <section class="section contact-section">
+        <section class="section contact-section" id="contact">
             <div class="container ">
                 <div class="row align-items-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="flip-left">
                         <div class="contact-content">
                             <div class="contact-content-title mb-4">
                                 <span>For more information...</span>
@@ -274,7 +275,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="flip-right">
                         <div class="contact-deatiles">
                             <img src="./assets/img/logo.png" alt="">
                             <h3>
@@ -397,7 +398,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
     <script>
+        AOS.init({
+            duration: 700,
+            offset: 200,
+        });
         $(".select-dropdown__button").on("click", function () {
             $(".select-dropdown__list").toggleClass("active");
         });
@@ -456,15 +463,15 @@
                 popup.style.display = "none";
                 localStorage.setItem("showPopup", "false");
             });
+
+
+
             document.getElementById("scrollToTop").addEventListener('click', (() => {
                 window.scrollTo({
                     top: 0,
                     behavior: 'smooth' // Smooth scrolling behavior
                 });
             }))
-
-
-
             // Show the button when user scrolls down
             window.onscroll = function () {
                 scrollFunction()
