--- a/flavors.html
+++ b/flavors.html
@@ -140,7 +140,7 @@
 
 
         </nav>
-        <div class="sub-page-header" data-aos="fade-right">
+        <div class="sub-page-header">
             <h1>
                 OUR FLAVORS
             </h1>
@@ -259,7 +259,9 @@
                                     <path d="M285 285.369H142.5C63.8 285.369 0 221.569 0 142.869C0 64.1691 63.8 0.369141 142.5 0.369141C221.2 0.369141 285 64.1691 285 142.869V285.369Z" fill="#1D1D1D" />
                                 </svg>
                                 </div>
-                                <img src="./assets/img/${product.product_img}" alt="" class="w-100">
+                                <img src="./assets/img/${product.product_img}" alt="" class="w-100 main-img">
+                                <img src="./assets/img/${product.hover_img}" alt="" class="w-100 hover-img">
+
                                 <span>${product.product_title}</span>
                             </div>
                             </div>
