--- a/ar/index.html
+++ b/ar/index.html
@@ -141,7 +141,7 @@
         <div class="hero-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6" data-aos="fade-up">
+                    <div class="col-md-6">
                         <div class="hero-text-content">
                             <div class="">
                                 <h1>Prime EXPREIENCE</h1>
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-down">
+                    <div class="col-md-6">
                         <div class="hero-img">
                             <img src="../assets/img/hero-img.png" alt="">
                         </div>
@@ -435,7 +435,8 @@
                                 <div class="col-md-3">
                                 <div class="prime-series-box">
                                     <div class="prime-series-img ${product.product_variant.toLowerCase().replace(" ", "-")}">
-                                    <img src="../assets/img/${product.product_img}" alt="">
+                                        <img src="../assets/img/${product.product_img}" alt="" class="w-100 main-img">
+                                        <img src="../assets/img/${product.hover_img}" alt="" class="w-100 hover-img">
                                     </div>
                                     <div class="prime-series-text">
                                     <h3>${product.product_title}</h3>
