--- a/ar/flavors.html
+++ b/ar/flavors.html
@@ -65,13 +65,13 @@
                                         </button>
                                         <ul class="select-dropdown__list">
                                             <li data-value="1" class="select-dropdown__list-item">
-                                                <a href="./index.html" class="d-flex align-items-center ">
+                                                <a href="../flavors.html" class="d-flex align-items-center ">
                                                     <img src="../assets/img/eng.png" alt="">
                                                     <span>English</span>
                                                 </a>
                                             </li>
                                             <li data-value="2" class="select-dropdown__list-item">
-                                                <a href="./ar/index.html" class="d-flex align-items-center ">
+                                                <a href="./flavors.html" class="d-flex align-items-center ">
                                                     <img src="../assets/img/ar.webp" alt="">
                                                     <span>Arabic</span>
                                                 </a>
