--- a/flavors.html
+++ b/flavors.html
@@ -71,7 +71,7 @@
                                                 </a>
                                             </li>
                                             <li data-value="2" class="select-dropdown__list-item">
-                                                <a href="./ar/index.html" class="d-flex align-items-center ">
+                                                <a href="./ar/flavors.html" class="d-flex align-items-center ">
                                                     <img src="./assets/img/ar.webp" alt="">
                                                     <span>Arabic</span>
                                                 </a>
