--- a/ar/index.html
+++ b/ar/index.html
@@ -282,7 +282,7 @@
                             </h3>
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://maps.app.goo.gl/WPQhAqUXgaiYm4jU9" target="_blank">
                                         <svg width="28" height="35" viewBox="0 0 28 35" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
@@ -293,7 +293,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="tel:+90 000 000 00 00">
                                         <svg width="23" height="26" viewBox="0 0 23 26" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
@@ -304,7 +304,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="mailto:info@prime-tobacco.com">
                                         <svg width="29" height="27" viewBox="0 0 29 27" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
