--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                                 </p>
                             </div>
                             <div class="hero-btns d-flex gap-4 mt-4">
-                                <button class="btn-1">
+                                <a href="#contact" class="btn-1">
                                     Contact us
-                                </button>
-                                <button class="btn-2 d-flex gap-3 align-items-center">
+                                </a>
+                                <a href="./flavors.html" class="btn-2 d-flex gap-3 align-items-center">
                                     explore
                                     <div class="d-flex gap-1 align-items-center">
                                         <img src="./assets/img/right-arrow.svg" alt="">
@@ -167,7 +167,7 @@
                                         <img src="./assets/img/right-arrow.svg" alt="">
 
                                     </div>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
