--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="mailto:info@prime-tobacco.com">
                                         <svg width="29" height="27" viewBox="0 0 29 27" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
