--- a/ar/index.html
+++ b/ar/index.html
@@ -162,9 +162,9 @@
                                 <a href="./flavors.html" class="btn-2 d-flex gap-3 align-items-center">
                                     explore
                                     <div class="d-flex gap-1 align-items-center">
-                                        <img src="./assets/img/right-arrow.svg" alt="">
-                                        <img src="./assets/img/right-arrow.svg" alt="">
-                                        <img src="./assets/img/right-arrow.svg" alt="">
+                                        <img src="../assets/img/right-arrow.svg" alt="">
+                                        <img src="../assets/img/right-arrow.svg" alt="">
+                                        <img src="../assets/img/right-arrow.svg" alt="">
 
                                     </div>
                                 </a>
@@ -433,10 +433,17 @@
                     .then(data => {
                         // Filter the data array to get only the products where isFeatures is true
                         const featuredProducts = data.filter(product => product.isFeatures);
+                        let currentIndex = 0;
                         // Construct HTML for each product and append it to the container
                         featuredProducts.forEach(product => {
+
+                            const animationDirection = currentIndex % 2 === 0 ? 'fade-right' :
+                                'fade-left';
+
+                            // Update the index for the next iteration
+                            currentIndex++;
                             productContainer.innerHTML += `
-                                <div class="col-md-3">
+                                <div class="col-md-3" data-aos="${animationDirection}">
                                 <div class="prime-series-box">
                                     <div class="prime-series-img ${product.product_variant.toLowerCase().replace(" ", "-")}">
                                         <img src="../assets/img/${product.product_img}" alt="" class="w-100 main-img">
