--- a/ar/flavors.html
+++ b/ar/flavors.html
@@ -34,19 +34,20 @@
                     <div class="navbar-nav justify-content-end  pe-3">
                         <ul class="navbar-nav mb-2 mb-lg-0 gap-4 text-uppercase align-items-center">
                             <li class="nav-item">
-                                <a class="nav-link active" href="./index.html" target="_self" title="">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./flavors.html" target="_self" title="">
-                                    Flavors
+                                <a class="nav-link " href="./index.html" target="_self" title=""> الرئيسية
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html#about" target="_self" title="">About Us</a>
+                                <a class="nav-link" href="./flavors.html" target="_self" title="">
+                                    النكهات
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about" target="_self" title="">من نحن</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html#contact" target="_self" title="">Contacts</a>
+                                <a class="nav-link" href="#contact" target="_self" title="">اتصل بنا</a>
                             </li>
                             <li class="nav-item d-lg-none">
                                 <div class="select-dropdown-wrapper">
