--- a/ar/index.html
+++ b/ar/index.html
@@ -32,19 +32,20 @@
                     <div class="navbar-nav justify-content-end  pe-3">
                         <ul class="navbar-nav mb-2 mb-lg-0 gap-4 text-uppercase align-items-center">
                             <li class="nav-item">
-                                <a class="nav-link active" href="./index.html" target="_self" title="">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./flavors.html" target="_self" title="">
-                                    Flavors
+                                <a class="nav-link active" href="./index.html" target="_self" title=""> الرئيسية
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about" target="_self" title="">About Us</a>
+                                <a class="nav-link" href="./flavors.html" target="_self" title="">
+                                    النكهات
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about" target="_self" title="">من نحن</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact" target="_self" title="">Contacts</a>
+                                <a class="nav-link" href="#contact" target="_self" title="">اتصل بنا</a>
                             </li>
                             <li class="nav-item d-lg-none">
                                 <div class="select-dropdown-wrapper">
@@ -144,23 +145,20 @@
                     <div class="col-md-6">
                         <div class="hero-text-content">
                             <div class="">
-                                <h1>Prime EXPREIENCE</h1>
+                                <h1>تجربة رائدة</h1>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing
-                                    elit, sed diam nonummy nibh euismod tincidunt ut
-                                    laoreet dolore magna aliquam erat volutpat. Ut wisi
-                                    enim ad Lorem ipsum dolor sit amet, consectetuer
-                                    adipiscing elit, sed diam nonummy nibh euismod
-                                    tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad
+                                    في شركة "برايم توباكو"، "تجربة رائدة" تجسد جوهرنا. نحن نرتقي بكل جانب من جوانب متعة
+                                    الشيشة، بدءًا من جودة مزيجنا الفائقة إلى التميز في خدمة العملاء. يضمن التزامنا أنك
+                                    بكل نفخة لست فقط تدخن الشيشة؛ بل تشارك في رحلة مختارة من الطعم والرائحة. اختر "برايم
+                                    توباكو" لتجربة تعيد تعريف المتعة والجودة في كل سحبة.
                                 </p>
                             </div>
                             <div class="hero-btns d-flex gap-4 mt-4">
                                 <a href="#contact" class="btn-1">
-                                    Contact us
+                                    اتصل بنا
                                 </a>
                                 <a href="./flavors.html" class="btn-2 d-flex gap-3 align-items-center">
-                                    explore
+                                    استكشف
                                     <div class="d-flex gap-1 align-items-center">
                                         <img src="../assets/img/right-arrow.svg" alt="">
                                         <img src="../assets/img/right-arrow.svg" alt="">
@@ -190,14 +188,16 @@
                     <div class="col-md-6" data-aos="fade-right">
                         <div class="about-content">
                             <div class="">
-                                <h1>About us</h1>
+                                <h1>من نحن</h1>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                    sed diam nonummy nibh euismod tincidunt ut laoreet
-                                    dolore magna aliquam erat volutpat. Ut wisi enim
-                                    adLorem ipsum dolor sit amet, consectetuer adipiscing
-                                    elit, sed diam nonummy nibh euismod tincidunt ut
-                                    laoreet dolore magna aliquam era ad
+                                    برايم توباكو، حيث تلتقي التقاليد بالابتكار في فن إنتاج تبغ الشيشة. بدأت رحلتنا مع
+                                    شغف عميق بصناعة مزيج استثنائي من تبغ الشيشة/النرجيلة الذي يكرم تراثنا مع احتضان
+                                    النكهات والثقافات العالمية.
+                                    في قلب علامتنا التجارية يكمن التزام بالجودة، والأصالة، والحرفية. يتم اختيار أوراق
+                                    التبغ لدينا بعناية من أفضل المصادر حول العالم، لضمان توفير كل نفخة تجربة غنية،
+                                    ناعمة، ولا مثيل لها. يمزج حرفيونا، الذين يمتلكون عقودًا من الخبرة المجمعة، بين
+                                    التقنيات التقليدية والابتكارات الحديثة لخلق نكهات فريدة تناسب كل من الخبراء والجدد
+                                    على حد سواء.
                                 </p>
 
                             </div>
@@ -209,18 +209,18 @@
         <section class="section prime-series-section">
             <div class="container">
                 <div class="section-title">
-                    <h2>prime series</h2>
+                    <h2>السلسلة الممتازة</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt <br>
-                        ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate accusamus adipisci facilis,
+                        error neque consequatur blanditiis minima maxime ab, non magni, exercitationem laudantium
+                        sapiente libero sequi ipsum officia totam dolor.
                     </p>
                 </div>
                 <div class="row productContainer " data-aos="fade-right">
 
                 </div>
                 <a href="./flavors.html" data-aos="fade-down">
-                    More detAILS...
+                    المزيد من التفاصي
                 </a>
             </div>
         </section>
@@ -229,19 +229,14 @@
                 <div class="row align-items-center">
                     <div class="col-md-6" data-aos="fade-right">
                         <div class="partner-content">
-                            <span>Do you want to Work With Us ?</span>
-                            <h2>Become A Partner</h2>
+                            <span>هل ترغب في العمل معنا؟</span>
+                            <h2>كن شريكًا</h2>
                             <p>
-                                Join Prime Tobacco on our mission to redefine the global
-                                hookah experience through unparalleled quality and
-                                innovative flavors. We're seeking partners who are as
-                                passionate about craftsmanship and cultural diversity as
-                                we are. By collaborating with us, you'll benefit from
-                                high-quality products, tailored support, and the
-                                opportunity to captivate a growing market of
-                                enthusiasts. Let's embark on this journey together and
-                                make every puff a celebration of excellence. Contact us
-                                to explore how we can succeed together
+                                انضم إلى برايم توباكو في مهمتنا لإعادة تعريف تجربة الشيشة العالمية من خلال جودة لا مثيل
+                                لها ونكهات مبتكرة. نحن نبحث عن شركاء يشاركوننا الشغف نفسه تجاه الحرفية والتنوع الثقافي.
+                                من خلال التعاون معنا، ستستفيد من منتجات ذات جودة عالية، دعم مُصمم خصيصًا لك، وفرصة لجذب
+                                سوق متنامي من المتحمسين. دعونا نبدأ هذه الرحلة معًا ونجعل كل نفخة احتفالاً بالتميز. اتصل
+                                بنا لاستكشاف كيف يمكننا أن ننجح معًا.
                             </p>
                         </div>
                     </div>
