--- a/index.html
+++ b/index.html
@@ -146,13 +146,12 @@
                             <div class="">
                                 <h1>Prime EXPREIENCE</h1>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing
-                                    elit, sed diam nonummy nibh euismod tincidunt ut
-                                    laoreet dolore magna aliquam erat volutpat. Ut wisi
-                                    enim ad Lorem ipsum dolor sit amet, consectetuer
-                                    adipiscing elit, sed diam nonummy nibh euismod
-                                    tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                                    Ut wisi enim ad
+                                    At PRIME TOBACCO, "Prime Experience" encapsulates our essence.
+                                    We elevate every aspect of hookah enjoyment, from the superior quality
+                                    of our blends to the excellence in customer service. Our commitment
+                                    ensures that with every puff, you're not just smoking hookah; you're
+                                    partaking in a curated journey of taste and aroma. Choose PRIME TOBACCO
+                                    for an experience that redefines pleasure and quality in every draw.
                                 </p>
                             </div>
                             <div class="hero-btns d-flex gap-4 mt-4">
@@ -192,12 +191,17 @@
                             <div class="">
                                 <h1>About us</h1>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                    sed diam nonummy nibh euismod tincidunt ut laoreet
-                                    dolore magna aliquam erat volutpat. Ut wisi enim
-                                    adLorem ipsum dolor sit amet, consectetuer adipiscing
-                                    elit, sed diam nonummy nibh euismod tincidunt ut
-                                    laoreet dolore magna aliquam era ad
+                                    PRIME TOBACCO, where tradition meets innovation in the
+                                    art of hookah tobacco production. Our journey began with a deep-rooted
+                                    passion for crafting exceptional hookah/shisha tobacco blends that honor
+                                    our heritage while embracing global flavors and cultures.
+                                    <br>
+                                    At the heart of our brand lies a commitment to quality, authenticity,
+                                    and craftsmanship. Our tobacco leaves are carefully selected from the
+                                    finest sources around the world, ensuring each puff delivers a rich,
+                                    smooth, and unparalleled experience. Our artisans, with decades of
+                                    combined experience, blend traditional techniques with modern innovations
+                                    to create unique flavors that cater to both connoisseurs and newcomers alike.
                                 </p>
 
                             </div>
@@ -232,16 +236,14 @@
                             <span>Do you want to Work With Us ?</span>
                             <h2>Become A Partner</h2>
                             <p>
-                                Join Prime Tobacco on our mission to redefine the global
-                                hookah experience through unparalleled quality and
-                                innovative flavors. We're seeking partners who are as
-                                passionate about craftsmanship and cultural diversity as
-                                we are. By collaborating with us, you'll benefit from
-                                high-quality products, tailored support, and the
-                                opportunity to captivate a growing market of
-                                enthusiasts. Let's embark on this journey together and
-                                make every puff a celebration of excellence. Contact us
-                                to explore how we can succeed together
+                                Join PRIME TOBACCO on our mission to redefine the global hookah
+                                experience through unparalleled quality and innovative flavors. We're
+                                seeking partners who are as passionate about craftsmanship and cultural
+                                diversity as we are. By collaborating with us, you'll benefit from high-quality
+                                products, tailored support, and the opportunity to captivate a growing market of
+                                enthusiasts.
+                                Let's embark on this journey together and make every puff a celebration of excellence.
+                                Contact us to explore how we can succeed together.
                             </p>
                         </div>
                     </div>
