--- a/ar/flavors.html
+++ b/ar/flavors.html
@@ -55,7 +55,7 @@
                                         <button href="#" role="button" data-value="" class="select-dropdown__button">
                                             <span class="select-dropdown__content">
                                                 <img src="../assets/img/ar.webp" alt="">
-                                                <span>Arabic</span>
+                                                <span>عربي</span>
                                             </span>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="20" fill="none"
                                                 viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -74,7 +74,7 @@
                                             <li data-value="2" class="select-dropdown__list-item">
                                                 <a href="./flavors.html" class="d-flex align-items-center ">
                                                     <img src="../assets/img/ar.webp" alt="">
-                                                    <span>Arabic</span>
+                                                    <span>عربي</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -100,7 +100,7 @@
                         <button href="#" role="button" data-value="" class="select-dropdown__button">
                             <span class="select-dropdown__content">
                                 <img src="../assets/img/ar.webp" alt="">
-                                <span>Arabic</span>
+                                <span>عربي</span>
                             </span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -117,7 +117,7 @@
                             <li data-value="2" class="select-dropdown__list-item">
                                 <a href="./ar/flavors.html" class="d-flex align-items-center ">
                                     <img src="../assets/img/ar.webp" alt="">
-                                    <span>Arabic</span>
+                                    <span>عربي</span>
                                 </a>
                             </li>
                         </ul>
@@ -143,21 +143,21 @@
         </nav>
         <div class="sub-page-header">
             <h1>
-                OUR FLAVORS
+                نكهاتنا
             </h1>
         </div>
         <section class="serises-section section">
             <div class="container ">
                 <div class="serises-section-title">
                     <div class="serises-section-title-shape" data-aos="zoom-in">
-                        prime series
+                        السلسلة الممتازة
                     </div>
                 </div>
                 <div class="row" id="productContainer" data-aos="fade-down-left">
 
                 </div>
                 <button id="viewMoreBtn" data-aos="zoom-in-up">
-                    view more
+                    عرض المزيد
                 </button>
             </div>
         </section>
