--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                             <li data-value="2" class="select-dropdown__list-item">
                                                 <a href="./ar/index.html" class="d-flex align-items-center ">
                                                     <img src="./assets/img/ar.webp" alt="">
-                                                    <span>Arabic</span>
+                                                    <span>عربي</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -114,7 +114,7 @@
                             <li data-value="2" class="select-dropdown__list-item">
                                 <a href="./ar/index.html" class="d-flex align-items-center ">
                                     <img src="./assets/img/ar.webp" alt="">
-                                    <span>Arabic</span>
+                                    <span>عربي</span>
                                 </a>
                             </li>
                         </ul>
