--- a/ar/index.html
+++ b/ar/index.html
@@ -53,7 +53,7 @@
                                         <button href="#" role="button" data-value="" class="select-dropdown__button">
                                             <span class="select-dropdown__content">
                                                 <img src="../assets/img/ar.webp" alt="">
-                                                <span>Arabic</span>
+                                                <span>عربي</span>
                                             </span>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="20" fill="none"
                                                 viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -72,7 +72,7 @@
                                             <li data-value="2" class="select-dropdown__list-item">
                                                 <a href="./ar/index.html" class="d-flex align-items-center ">
                                                     <img src="../assets/img/ar.webp" alt="">
-                                                    <span>Arabic</span>
+                                                    <span>عربي</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -98,7 +98,7 @@
                         <button href="#" role="button" data-value="" class="select-dropdown__button">
                             <span class="select-dropdown__content">
                                 <img src="../assets/img/ar.webp" alt="">
-                                <span>Arabic</span>
+                                <span>عربي</span>
                             </span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -115,7 +115,7 @@
                             <li data-value="2" class="select-dropdown__list-item">
                                 <a href="./ar/index.html" class="d-flex align-items-center ">
                                     <img src="../assets/img/ar.webp" alt="">
-                                    <span>Arabic</span>
+                                    <span>عربي</span>
                                 </a>
                             </li>
                         </ul>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="hero-img">
+                        <div class="hero-img hero-img-ar">
                             <img src="../assets/img/hero-img.png" alt="">
                         </div>
                     </div>
