--- a/flavors.html
+++ b/flavors.html
@@ -73,7 +73,7 @@
                                             <li data-value="2" class="select-dropdown__list-item">
                                                 <a href="./ar/flavors.html" class="d-flex align-items-center ">
                                                     <img src="./assets/img/ar.webp" alt="">
-                                                    <span>Arabic</span>
+                                                    <span>عربي</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -116,7 +116,7 @@
                             <li data-value="2" class="select-dropdown__list-item">
                                 <a href="./ar/flavors.html" class="d-flex align-items-center ">
                                     <img src="./assets/img/ar.webp" alt="">
-                                    <span>Arabic</span>
+                                    <span>عربي</span>
                                 </a>
                             </li>
                         </ul>
