--- a/ar/flavors.html
+++ b/ar/flavors.html
@@ -270,7 +270,7 @@
                                 </div>
                                 <img src="../assets/img/${product.product_img}" alt="" class="w-100 main-img">
                                 <img src="../assets/img/${product.hover_img}" alt="" class="w-100 hover-img">
-                                <span>${product.product_title}</span>
+                                <span>${product.product_title_ar}</span>
                             </div>
                             </div>
                              `;
