--- a/ar/index.html
+++ b/ar/index.html
@@ -445,7 +445,7 @@
                                         <img src="../assets/img/${product.hover_img}" alt="" class="w-100 hover-img">
                                     </div>
                                     <div class="prime-series-text">
-                                    <h3>${product.product_title}</h3>
+                                    <h3>${product.product_title_ar}</h3>
                                     </div>
                                 </div>
                                 </div>
